@@ -496,6 +496,27 @@ module Gluon::Test
       assert_equal('あいうえお', @c.foo)
     end
 
+    def test_encoding_OK_list
+      @Controller.class_eval{
+        attr_accessor :foo
+      }
+      @c.foo = [
+        'あいうえお'.force_encoding(Encoding::ASCII_8BIT),
+        'かきくけこ'.force_encoding(Encoding::ASCII_8BIT)
+      ]
+
+      @c.validation(@errors) do |v|
+        v.encoding :foo
+      end
+
+      assert_equal(true, @r.validation)
+      assert_equal([], @errors)
+      assert_equal(Encoding::UTF_8, @c.foo[0].encoding)
+      assert_equal('あいうえお', @c.foo[0])
+      assert_equal(Encoding::UTF_8, @c.foo[1].encoding)
+      assert_equal('かきくけこ', @c.foo[1])
+    end
+
     def test_encoding_NG
       @Controller.class_eval{
         attr_accessor :foo
@@ -509,6 +530,28 @@ module Gluon::Test
       assert_equal(false, @r.validation)
       assert_equal([ "encoding of `foo' is not EUC-JP." ], @errors)
       assert_equal(Encoding::EUC_JP, @c.foo.encoding)
+      assert_not_equal('あいうえお'.encode(Encoding::EUC_JP), @c.foo)
+    end
+
+    def test_encoding_NG_list
+      @Controller.class_eval{
+        attr_accessor :foo
+      }
+      @c.foo = [
+        'あいうえお'.force_encoding(Encoding::ASCII_8BIT),
+        'かきくけこ'.encode(Encoding::EUC_JP).force_encoding(Encoding::ASCII_8BIT)
+      ]
+
+      @c.validation(@errors) do |v|
+        v.encoding :foo, :expected_encoding => Encoding::EUC_JP
+      end
+
+      assert_equal(false, @r.validation)
+      assert_equal([ "encoding of `foo' is not EUC-JP." ], @errors)
+      assert_equal(Encoding::EUC_JP, @c.foo[0].encoding)
+      assert_not_equal('あいうえお'.encode(Encoding::EUC_JP), @c.foo[0])
+      assert_equal(Encoding::EUC_JP, @c.foo[1].encoding)
+      assert_equal('かきくけこ'.encode(Encoding::EUC_JP), @c.foo[1])
     end
 
     def test_encoding_NG_error_message
@@ -524,6 +567,7 @@ module Gluon::Test
       assert_equal(false, @r.validation)
       assert_equal([ 'foo is NG.' ], @errors)
       assert_equal(Encoding::EUC_JP, @c.foo.encoding)
+      assert_not_equal('あいうえお'.encode(Encoding::EUC_JP), @c.foo)
     end
 
     def test_encoding_ignored_nil
